# AUE4040-team-project

./: .gitignore  13_Recursive_Least_square.ipynb  README.md
calibration/: README.md
calibration/calib/: 02_calibrate_create_rectification_map.ipynb  K_l.npy  K_r.npy  capture_stereo.py  dist_coeff_l.npy  dist_coeff_r.npy
calibration/camera/: __init__.py
calibration/camera/jetcam/: csi_camera.py
calibration/depth_pipeline_python/: depth_opencv.py  depth_vpi.py
final_project/: CHECKLIST.md  PHASE1.md  PHASE2.md  PHASE3.md  PRESENTATION.md  README.md  model.py
final_project/data_pipeline/: bev_calibration.py  bev_calibration_check.ipynb  extract_for_labeling.py  extract_labels.py  launch_and_record.ipynb  preprocess.py  test_waypoint_gt.py  visualize_labels.py
final_project/models/segformer_lane/: config.json
final_project/ros2_ws/: README.md
final_project/ros2_ws/src/rover_calib/: package.xml  setup.cfg  setup.py
final_project/ros2_ws/src/rover_calib/launch/: bev_capture.launch.py
final_project/ros2_ws/src/rover_calib/rover_calib/: bev_capture_node.py
final_project/ros2_ws/src/rover_camera/: package.xml  setup.py
final_project/ros2_ws/src/rover_camera/rover_camera/: camera_node.py  monitor_node.py  overlay_viz_node.py
final_project/ros2_ws/src/rover_common/: package.xml  setup.cfg  setup.py
final_project/ros2_ws/src/rover_common/resource/: rover_common
final_project/ros2_ws/src/rover_common/rover_common/: __init__.py  constants.py  control.py  image_io.py  paths.py  qos.py
final_project/ros2_ws/src/rover_lane/: package.xml  setup.py  test_pursuit.py
final_project/ros2_ws/src/rover_lane/launch/: drive.launch.py
final_project/ros2_ws/src/rover_lane/rover_lane/: e2e_infer_node.py
final_project/ros2_ws/src/rover_recorder/: package.xml  setup.py
final_project/ros2_ws/src/rover_recorder/launch/: record.launch.py
final_project/ros2_ws/src/rover_recorder/rover_recorder/: bag_recorder_node.py  motor_bridge_node.py
final_project/ros2_ws/src/rover_teleop/: package.xml  setup.py
final_project/ros2_ws/src/rover_teleop/rover_teleop/: teleop_node.py
final_project/training/: audit_h5.py  dataset.py  e2e-train_kaggle.ipynb  export_onnx.py  test_hflip.py  train_e2e.py  train_e2e_colab.ipynb  train_segformer_colab.ipynb  train_yolo_colab.ipynb  viz.py
install/: local_setup.sh  setup.sh
log/: latest_build
main/: .gitignore  PROJECT_PLAN.md  README.md  TOMORROW.md  train_yolo_colab.ipynb
main/labeling/: pseudo_label.py  sample_frames.py
main/ros2_ws/models/: e2e_left.metadata.json
main/ros2_ws/src/rover_bringup/: package.xml
main/ros2_ws/src/rover_bringup/config/: params.yaml
main/ros2_ws/src/rover_bringup/launch/: autonomous.launch.py
main/ros2_ws/src/rover_control/: package.xml  setup.py
main/ros2_ws/src/rover_control/rover_control/: control_node.py  motor_driver.py
main/ros2_ws/src/rover_decision/: package.xml  setup.cfg
main/ros2_ws/src/rover_decision/rover_decision/: decision_node.py  fsm.py  steering.py
main/ros2_ws/src/rover_lane/: setup.py
main/ros2_ws/src/rover_lane/rover_lane/: center_inference.py  lane_node.py  model_manager.py
main/ros2_ws/src/rover_msgs/: CMakeLists.txt  package.xml
main/ros2_ws/src/rover_msgs/msg/: Detection.msg  FSMState.msg  RoadCenter.msg
main/ros2_ws/src/rover_perception/: setup.py
main/ros2_ws/src/rover_perception/rover_perception/: yolo_inference.py  yolo_node.py
main/ros2_ws/src/rover_perception/scripts/: calibrate_vehicle_distance.py
main/ros2_ws/src/rover_pilotnet/: package.xml  setup.cfg  setup.py
main/ros2_ws/src/rover_pilotnet/rover_pilotnet/: center_inference.py  model_manager.py  pilotnet_node.py
main/ros2_ws/src/rover_recorder/notebooks/: record_and_label.ipynb
main/ros2_ws/src/rover_recorder/rover_recorder/: segment_labeler.py
main/ros2_ws/src/rover_recorder/scripts/: teleop_record.py
main/ros2_ws/src/rover_stereo/: package.xml
main/ros2_ws/src/rover_stereo/calib/: capture_stereo.py
main/ros2_ws/src/rover_stereo/config/: stereo_calib.yaml
main/ros2_ws/src/rover_stereo/rover_stereo/: rectify.py  stereo_node.py  stereo_node.py.tmp.13074.48fc1a8a4152
main/ros2_ws/src/rover_training/: README.md
main/ros2_ws/src/rover_training/models/: action_dataset.py  center_cnn.py  e2e_common.metadata.json
main/ros2_ws/src/rover_training/scripts/: export_to_onnx.py  export_to_trt.sh  preprocess.py  train_center.py  train_e2e.py  train_yolo.py
mid_project/: infer_local.py
mid_project/labeling/: classes.txt
mid_project/ros2_ws/models/: e2e_right.metadata.json
mid_project/ros2_ws/src/rover_bringup/: CMakeLists.txt
mid_project/ros2_ws/src/rover_bringup/config/: hardware.yaml  missions.yaml
mid_project/ros2_ws/src/rover_bringup/launch/: autonomous.launch.py  debug.launch.py  recording.launch.py
mid_project/ros2_ws/src/rover_control/rover_control/: control_node.py
mid_project/ros2_ws/src/rover_decision/: setup.py
mid_project/ros2_ws/src/rover_decision/rover_decision/: decision_node.py  fsm.py  safety.py
mid_project/ros2_ws/src/rover_lane/: package.xml  setup.cfg
mid_project/ros2_ws/src/rover_msgs/: CMakeLists.txt
mid_project/ros2_ws/src/rover_msgs/msg/: DetectionArray.msg
mid_project/ros2_ws/src/rover_perception/: package.xml
mid_project/ros2_ws/src/rover_perception/rover_perception/: yolo_inference.py  yolo_node.py
mid_project/ros2_ws/src/rover_perception/scripts/: calibrate_vehicle_distance.py
mid_project/ros2_ws/src/rover_recorder/: package.xml  setup.cfg  setup.py
mid_project/ros2_ws/src/rover_recorder/notebooks/: record_and_label.ipynb
mid_project/ros2_ws/src/rover_recorder/rover_recorder/: recorder_node.py
mid_project/ros2_ws/src/rover_recorder/scripts/: motor_test.py  teleop_record.py
mid_project/ros2_ws/src/rover_stereo/: setup.cfg  setup.py
mid_project/ros2_ws/src/rover_training/: README.md
tutorials/: 00_linux_manual.md  01_ssh_setup.md  02_quantization.md  02_yolo_quantization.md  03_ros2_manual.md  README.md  practice.ipynb
(+8 files in other folders)
