<?xml version="1.0"?>
<package format="3">
  <name>rover_calib</name>
  <version>0.1.0</version>
  <description>One-shot BEV calibration image capture (camera + key press).</description>
  <maintainer email="inhsroy@hanyang.ac.kr">hyunseo</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
