<?xml version="1.0"?>
<package format="3">
  <name>rover_teleop</name>
  <version>0.1.0</version>
  <description>1D steering-level keyboard teleop (cbreak, SSH-friendly).</description>
  <maintainer email="inhsroy@hanyang.ac.kr">hyunseo</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rover_common</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
