<?xml version="1.0"?>
<package format="3">
  <name>rover_lane</name>
  <version>0.1.0</version>
  <description>Road-center regression CNN node (3 models: common/left/right).</description>
  <maintainer email="inhsroy@hanyang.ac.kr">team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rover_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
