<?xml version="1.0"?>
<package format="3">
  <name>rover_recorder</name>
  <version>0.1.0</version>
  <description>Teleop + synchronized camera/command recorder for BC dataset collection.</description>
  <maintainer email="inhsroy@hanyang.ac.kr">team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
